fix table open behind timeling

--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -87,13 +87,6 @@
 							}
 						}
 					}
-					.Sensor {
-						//margin-left: -45px !important;
-					}
-
-					.Type {
-						//margin-right: 10px !important;
-					}
 				}
 			}
 		}
